Validador de Mantenedor de productos.
Se corrigen algunos detalles de los otros HTML, se agrega el productos.js .

--- a/usuarios.html
+++ b/usuarios.html
@@ -34,8 +34,8 @@
           <!-- Campos de registro de usuario -->
           <div class="mb-3 fw-bold">
               <label for="id" class="form-label titulos_2">ID</label>
-              <input type="text" class="form-control registro_color" id="id" placeholder="Ej: 58" required>
-              <div class="invalid-feedback">Debe llenar el campo ID</div>
+              <input type="text" class="form-control registro_color" id="id" name="id" placeholder="Ej: 58" required>
+              
           </div>
           
           <!-- RUT -->
