--- a/ventas.html
+++ b/ventas.html
@@ -42,7 +42,9 @@
                 <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
                 <td scope="col" style="background-color:#cb6e84;">$15.000</td>
                 <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Vendido</td>
-                <td scope="col" class="ver-detalle" style="background-color:#cb6e84; color:#fdfdfd" onclick="verDetalle()">Ver Detalle</td>
+                <td scope="col" style="background-color:#cb6e84;">
+                  <button class="btn btn-primary boton_eliminar btn-sm boton_ver_detalle" onclick="verDetalle()">Ver Detalle</button>
+                </td>
                 <td scope="col" style="background-color:#cb6e84;">
                   <div class="botones-container">
                     <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
@@ -59,7 +61,9 @@
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">No</td>
                   <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">En Bodega</td>
-                  <td scope="col" class="ver-detalle" style="background-color:#cb6e84; color:#fdfdfd" onclick="verDetalle()">Ver Detalle</td>
+                  <td scope="col" style="background-color:#cb6e84;">
+                    <button class="btn btn-primary boton_eliminar btn-sm boton_ver_detalle" onclick="verDetalle()">Ver Detalle</button>
+                  </td>
                   <td scope="col" style="background-color:#cb6e84;">
                     <div class="botones-container">
                       <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
@@ -76,7 +80,9 @@
                 <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
                 <td scope="col" style="background-color:#cb6e84;">$7.000</td>
                 <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Entregado</td>
-                <td scope="col" class="ver-detalle" style="background-color:#cb6e84;color:#fdfdfd" onclick="verDetalle()">Ver Detalle</td>
+                <td scope="col" style="background-color:#cb6e84;">
+                <button class="btn btn-primary boton_eliminar btn-sm boton_ver_detalle" onclick="verDetalle()">Ver Detalle</button>
+                </td>
                 <td scope="col" style="background-color:#cb6e84;">
                   <div class="botones-container">
                     <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
@@ -93,7 +99,9 @@
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
                   <td scope="col" style="background-color:#cb6e84;">$38.000</td>
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Anulado</td>
-                  <td scope="col" class="ver-detalle" style="background-color:#cb6e84; color:#fdfdfd" onclick="verDetalle()">Ver Detalle</td>
+                  <td scope="col" style="background-color:#cb6e84;">
+                    <button class="btn btn-primary boton_eliminar btn-sm boton_ver_detalle" onclick="verDetalle()">Ver Detalle</button>
+                  </td>
                   <td scope="col" style="background-color:#cb6e84;">
                     <div class="botones-container">
                       <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
