--- a/productos.html
+++ b/productos.html
@@ -34,8 +34,9 @@
   
                     <div class="mb-3 fw-bold">
                         <label for="categoria" class="form-label titulos_2">Categoría</label>
-                        <select class="form-select registro_color" style="color:black"  id="categoria">
-                            <option value="1">MOBA</option>
+                        <select class="form-select registro_color" style="color:black"  id="categoria" name="categoria">
+                          <option value="" selected>Seleccione una categoría</option>  
+                          <option value="1">MOBA</option>
                             <option value="2">Acción</option>
                             <option value="3">Arcade</option>
                             <option value="3">Deportes</option>
@@ -58,15 +59,14 @@
 
                     <div class="mb-3 fw-bold">
                       <label for="descripcion" class="form-label titulos_2">Descripción</label>
-                      <textarea class="form-control registro_color" id="descripcion" name="descripcion" rows="3" placeholder="Juego de disparos" required ></textarea>
-                      <div class="invalid-feedback titulos_2">Debe llenar el campo Descripción</div>
+                      <textarea class="form-control registro_color" id="descripcion" name="descripcion" rows="3" placeholder="Juego de disparos"></textarea>
                     </div>
 
                     <!-- Precio -->
   
                     <div class="mb-3 fw-bold">
                       <label for="precio" class="form-label titulos_2">Precio</label>
-                      <input class="form-control registro_color" id="precio" name="precio" placeholder="$10.000" required>
+                      <input type="number" class="form-control registro_color" id="precio" name="precio" placeholder="$10.000" >
                       
                     </div>
 
@@ -76,7 +76,7 @@
 
                     <div class="mb-3 fw-bold">
                       <label for="descuento_subscriptor" class="form-label titulos_2">Descuento Subscriptor</label>
-                      <input class="form-control registro_color" id="descuento_subscriptor" name="descuento_subscriptor" placeholder="5%" required>
+                      <input class="form-control registro_color" id="descuento_subscriptor" name="descuento_subscriptor" placeholder="5%" >
                     </div>
 
                     <!-- Descuento por oferta -->
@@ -100,7 +100,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <input type="file" id="upload-image" class="form-control boton_buscar_anonimo_2 required" >
+                                <input type="file" id="upload-image" class="form-control boton_buscar_anonimo_2" >
                             </td>
                         </tr>
                     </table>
@@ -110,6 +110,7 @@
                     <button type="update" class="btn boton_buscar_anonimo_2" >Guardar</button>
                     <button type="new" class="btn boton_buscar_anonimo_2" >Nuevo</button>
                     <button type="delete" class="btn boton_buscar_anonimo_2" >Eliminar</button>
+                    <button id="id_btnLimpiar" type="reset" class="btn boton_buscar_anonimo_2" >Limpiar</button>
                   </div>
                 </div>
               </div>
@@ -117,7 +118,6 @@
           </section>
         </div>
     </Section>
-
     <!--Tabla Productos-->
     <Section>
         <div class="container pt-2" >
@@ -134,6 +134,7 @@
                 <th scope="col" style="background-color:#ef89a1;">Precio</th>
                 <th scope="col" style="background-color:#ef89a1;" class="d-none d-lg-block d-lg-table-cell">%Desc. Subscriptor</th>
                 <th scope="col" style="background-color:#ef89a1;" class="d-none d-lg-block d-lg-table-cell">%Desc. Oferta</th>
+                <th scope="col" style="background-color:#ef89a1" class="d-none d-lg-block d-lg-table-cell">Foto</th>
               </thead>
               <tbody>
                 <tr> <!--tr:filas  td:columnas-->
@@ -145,6 +146,7 @@
                     <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">5%</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">2%</td>
+                    <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/producto1.jpg" alt="Foto" style="width: 50px;"></td>
                 </tr>
                 <tr> <!--tr:filas  td:columnas-->
                     <td scope="row" style="background-color:#cb6e84;"></td>
@@ -155,6 +157,7 @@
                     <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">5%</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">2%</td>
+                    <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/producto1.jpg" alt="Foto" style="width: 50px;"></td>
                 </tr>
                 <tr> <!--tr:filas  td:columnas-->
                   <td scope="row" style="background-color:#cb6e84;">></td>
@@ -165,6 +168,7 @@
                   <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">5%</td>
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">2%</td>
+                  <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/producto1.jpg" alt="Foto" style="width: 50px;"></td>
                 </tr>
                 <tr> <!--tr:filas  td:columnas-->
                     <td scope="row" style="background-color:#cb6e84;"></td>
@@ -175,6 +179,7 @@
                     <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">5%</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">2%</td>
+                    <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/producto1.jpg" alt="Foto" style="width: 50px;"></td>
                   </tr>
               </tbody>
             </table>
