--- a/usuarios.html
+++ b/usuarios.html
@@ -34,7 +34,7 @@
           <!-- Campos de registro de usuario -->
           <div class="mb-3 fw-bold">
               <label for="id" class="form-label titulos_2">ID</label>
-              <input type="text" class="form-control registro_color" id="id" name="id" placeholder="Ej: 58" required>
+              <input type="text" class="form-control registro_color" id="id" name="id" placeholder="Ej: 58" >
               
           </div>
           
@@ -51,13 +51,14 @@
           <br>
 
           <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+              <input class="form-check-input" type="radio" name="tipo" id="tipo" value="option1">
               <label class="form-check-label titulos_2" for="inlineRadio1">Cliente</label>
           </div>
           <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+              <input class="form-check-input" type="radio" name="tipo" id="tipo" value="option2">
               <label class="form-check-label titulos_2" for="inlineRadio2">Usuario</label>
           </div>
+          <div id="tipo-error" class="error-text"></div>
 
           <!-- Nombres -->
           <br><br>
@@ -110,11 +111,6 @@
          <br> 
         <div class="mb-3 fw-bold d-flex flex-column align-items-start">
             <label for="password" class="form-label titulos_2">Contraseña</label>
-            <div class="d-flex align-items-center">
-                <input type="text" class="form-control registro_color" id="contraseña" placeholder="123" required>
-                <button type="button" class="btn boton_buscar_anonimo_2 btn-primary ms-2">Generar Contraseña</button>
-            </div>
-            <div class="invalid-feedback">Debe llenar el campo contraseña</div>
         </div>
           </div>
               <br>
@@ -129,7 +125,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="file" id="upload-image" class="form-control boton_buscar_anonimo_2 required">
+                            <input type="file" id="upload-image" class="form-control boton_buscar_anonimo_2 ">
                         </td>
                     </tr>
                 </table>
@@ -140,6 +136,11 @@
                 <button type="update" class="btn boton_buscar_anonimo_2">Guardar</button>
                 <button type="update" class="btn boton_buscar_anonimo_2" >Agregar</button>
                 <button type="reset" class="btn boton_buscar_anonimo_2">Eliminar</button>
+                <button id="id_btnLimpiar" type="reset" class="btn boton_buscar_anonimo_2" >Limpiar</button>
+            </div>
+            <div> 
+              <br>
+              <button type="button" class="btn boton_ver_detalle">Generar Contraseña</button>
             </div>
               </div>
             </div>
