--- a/nosotros.html
+++ b/nosotros.html
@@ -36,7 +36,7 @@
               con una variedad de productos coleccionables y temáticos para llevar a casa.
             </p>
             <br>
-            <button class="btn btn-primary btn-block boton_correo" onclick="window.location.href='mailto:ejemplo@example.com'" style="background-color: #5d6087;">Enviar correo</button>
+            <button class="btn btn-primary btn-block boton_buscar_anonimo_2" onclick="window.location.href='mailto:ejemplo@example.com'" style="background-color: #5d6087;">Enviar correo</button>
           </div>
         </div>
       </div>
@@ -53,7 +53,7 @@
               títulos emocionantes y una experiencia inmersiva para todas las edades. 
             </p>
             <br>
-            <button class="btn btn-primary btn-block boton_correo" onclick="window.location.href='mailto:ejemplo@example.com'" style="background-color: #5d6087;">Enviar correo</button>
+            <button class="btn btn-primary btn-block boton_buscar_anonimo_2" onclick="window.location.href='mailto:ejemplo@example.com'" style="background-color: #5d6087;">Enviar correo</button>
           </div>
         </div>
       </div>
@@ -71,7 +71,7 @@
               cada visita a nuestra tienda sea única y satisfactoria.
             </p>
             <br><br>
-            <button class="btn btn-primary btn-block boton_correo" onclick="window.location.href='mailto:ejemplo@example.com'" style="background-color: #5d6087;">Enviar correo</button>
+            <button class="btn btn-primary btn-block boton_buscar_anonimo_2" onclick="window.location.href='mailto:ejemplo@example.com'" style="background-color: #5d6087;">Enviar correo</button>
           </div>
         </div>
       </div>
@@ -87,7 +87,7 @@
               asegura que cada cliente se sienta valorado, haciendo que cada visita a nuestra 
               tienda sea memorable.
             </p>
-            <button class="btn btn-primary btn-block boton_correo" onclick="window.location.href='mailto:ejemplo@example.com'" style="background-color: #5d6087;">Enviar correo</button>
+            <button class="btn btn-primary btn-block boton_buscar_anonimo_2" onclick="window.location.href='mailto:ejemplo@example.com'" style="background-color: #5d6087;">Enviar correo</button>
           </div>
         </div>
       </div>
