Feedback del profe por hacer

--- a/bodega.html
+++ b/bodega.html
@@ -57,6 +57,11 @@
                             <br><br>
                           </td>
                     </tr>
+                    <tr>
+                      <td>
+                          <input type="file" id="upload-image" class="form-control boton_buscar_anonimo_2 ">
+                      </td>
+                  </tr>
                 </table>
             </div>
             &nbsp;
