--- a/productos.html
+++ b/productos.html
@@ -134,7 +134,7 @@
                 <th scope="col" style="background-color:#ef89a1;">Precio</th>
                 <th scope="col" style="background-color:#ef89a1;" class="d-none d-lg-block d-lg-table-cell">%Desc. Subscriptor</th>
                 <th scope="col" style="background-color:#ef89a1;" class="d-none d-lg-block d-lg-table-cell">%Desc. Oferta</th>
-                <th scope="col" style="background-color:#ef89a1" class="d-none d-lg-block d-lg-table-cell">Foto</th>
+                <!--agregar apartado de fotos para poner fotos-->
               </thead>
               <tbody>
                 <tr> <!--tr:filas  td:columnas-->
@@ -146,7 +146,7 @@
                     <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">5%</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">2%</td>
-                    <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/producto1.jpg" alt="Foto" style="width: 50px;"></td>
+                    <!--agregar fotos-->
                 </tr>
                 <tr> <!--tr:filas  td:columnas-->
                     <td scope="row" style="background-color:#cb6e84;"></td>
@@ -157,7 +157,7 @@
                     <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">5%</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">2%</td>
-                    <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/producto1.jpg" alt="Foto" style="width: 50px;"></td>
+                    <!--agregar fotos-->
                 </tr>
                 <tr> <!--tr:filas  td:columnas-->
                   <td scope="row" style="background-color:#cb6e84;">></td>
@@ -168,7 +168,7 @@
                   <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">5%</td>
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">2%</td>
-                  <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/producto1.jpg" alt="Foto" style="width: 50px;"></td>
+                  <!--agregar fotos-->
                 </tr>
                 <tr> <!--tr:filas  td:columnas-->
                     <td scope="row" style="background-color:#cb6e84;"></td>
@@ -179,7 +179,7 @@
                     <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">5%</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">2%</td>
-                    <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/producto1.jpg" alt="Foto" style="width: 50px;"></td>
+                    <<!--agregar fotos-->
                   </tr>
               </tbody>
             </table>
