--- a/ventas.html
+++ b/ventas.html
@@ -42,9 +42,8 @@
                 <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
                 <td scope="col" style="background-color:#cb6e84;">$15.000</td>
                 <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Vendido</td>
-                <td scope="col" style="background-color:#cb6e84;">
-                  <button class="btn btn-primary boton_eliminar btn-sm boton_ver_detalle" onclick="verDetalle()">Ver Detalle</button>
-                </td>
+                <!--poner ver detalle como boton-->
+                <td scope="col" class="ver-detalle" style="background-color:#cb6e84; color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</td>
                 <td scope="col" style="background-color:#cb6e84;">
                   <div class="botones-container">
                     <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
@@ -61,9 +60,8 @@
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">No</td>
                   <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">En Bodega</td>
-                  <td scope="col" style="background-color:#cb6e84;">
-                    <button class="btn btn-primary boton_eliminar btn-sm boton_ver_detalle" onclick="verDetalle()">Ver Detalle</button>
-                  </td>
+                  <!--poner ver detalle como boton-->
+                  <td scope="col" class="ver-detalle" style="background-color:#cb6e84; color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</td>
                   <td scope="col" style="background-color:#cb6e84;">
                     <div class="botones-container">
                       <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
@@ -80,9 +78,8 @@
                 <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
                 <td scope="col" style="background-color:#cb6e84;">$7.000</td>
                 <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Entregado</td>
-                <td scope="col" style="background-color:#cb6e84;">
-                <button class="btn btn-primary boton_eliminar btn-sm boton_ver_detalle" onclick="verDetalle()">Ver Detalle</button>
-                </td>
+                <!--poner ver detalle como boton-->
+                <td scope="col" class="ver-detalle" style="background-color:#cb6e84; color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</td>
                 <td scope="col" style="background-color:#cb6e84;">
                   <div class="botones-container">
                     <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
@@ -99,9 +96,8 @@
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
                   <td scope="col" style="background-color:#cb6e84;">$38.000</td>
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Anulado</td>
-                  <td scope="col" style="background-color:#cb6e84;">
-                    <button class="btn btn-primary boton_eliminar btn-sm boton_ver_detalle" onclick="verDetalle()">Ver Detalle</button>
-                  </td>
+                  <!--poner ver detalle como boton-->
+                  <td scope="col" class="ver-detalle" style="background-color:#cb6e84; color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</td>
                   <td scope="col" style="background-color:#cb6e84;">
                     <div class="botones-container">
                       <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
