Se arreglaron los detalles
a

--- a/bodega.html
+++ b/bodega.html
@@ -43,25 +43,26 @@
                     <option value="5">Fifa</option>
                 </select>
                 </div>
-                <div class="mb-3 fw-bold">
-                  <label for="id" class="form-label titulos_2">Cantidad</label>
-                  <input type="text" class="form-control registro_color" id="cantidad" name="cantidad" placeholder="ej: 5">
+                
+                 <!-- Cantidad -->
+                 <div class="mb-3 fw-bold">
+                  <label for="cantidad" class="form-label titulos_2">Cantidad</label>
+                  <input class="form-control registro_color" id="cantidad" name="cantidad" placeholder="Ej;5" >
                 </div>
               </div>
               <!--Foto de perfil-->
-              <div class="col-sm-12 col-md-6" >
+              <div class="col-sm-12 col-md-6">
                 <table>
                     <tr>
                         <td>
-                            <img id="user-image-preview image-bodega" src="img/producto1.jpg" alt="" class="user-image" style="max-width: 300px; margin-right: 220px">
+                            <img id="user-image-preview image-bodega" src="img/producto1.jpg" alt="" class="user-image" style="max-width: 300px; margin-left: auto;">
                             <br><br>
-                          </td>
+                        </td>
                     </tr>
-                    <tr>
-                      <td>
-                          <input type="file" id="upload-image" class="form-control boton_buscar_anonimo_2 ">
-                      </td>
-                  </tr>
+                </table>
+            </div>
+            
+   
                 </table>
             </div>
             &nbsp;
