--- a/productos.html
+++ b/productos.html
@@ -134,7 +134,8 @@
                 <th scope="col" style="background-color:#ef89a1;">Precio</th>
                 <th scope="col" style="background-color:#ef89a1;" class="d-none d-lg-block d-lg-table-cell">%Desc. Subscriptor</th>
                 <th scope="col" style="background-color:#ef89a1;" class="d-none d-lg-block d-lg-table-cell">%Desc. Oferta</th>
-                <!--agregar apartado de fotos para poner fotos-->
+                <th scope="col" style="background-color:#ef89a1" class="d-none d-lg-block d-lg-table-cell">Foto</th>
+              </tr>                <!--agregar apartado de fotos para poner fotos-->
               </thead>
               <tbody>
                 <tr> <!--tr:filas  td:columnas-->
@@ -146,6 +147,7 @@
                     <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">5%</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">2%</td>
+                    <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/producto1.jpg" alt="Foto" style="width: 50px;"></td>
                     <!--agregar fotos-->
                 </tr>
                 <tr> <!--tr:filas  td:columnas-->
@@ -157,6 +159,7 @@
                     <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">5%</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">2%</td>
+                    <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/producto1.jpg" alt="Foto" style="width: 50px;"></td>
                     <!--agregar fotos-->
                 </tr>
                 <tr> <!--tr:filas  td:columnas-->
@@ -168,6 +171,7 @@
                   <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">5%</td>
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">2%</td>
+                  <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/producto1.jpg" alt="Foto" style="width: 50px;"></td>
                   <!--agregar fotos-->
                 </tr>
                 <tr> <!--tr:filas  td:columnas-->
@@ -179,7 +183,8 @@
                     <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">5%</td>
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">2%</td>
-                    <<!--agregar fotos-->
+                    <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/producto1.jpg" alt="Foto" style="width: 50px;"></td>
+                    <!--agregar fotos-->
                   </tr>
               </tbody>
             </table>
