--- a/ventas.html
+++ b/ventas.html
@@ -43,7 +43,9 @@
                 <td scope="col" style="background-color:#cb6e84;">$15.000</td>
                 <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Vendido</td>
                 <!--poner ver detalle como boton-->
-                <td scope="col" class="ver-detalle" style="background-color:#cb6e84; color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</td>
+                <td scope="col" style="background-color:#cb6e84;">
+                  <button class="ver-detalle btn btn-secondary" style="color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</button>
+                </td>
                 <td scope="col" style="background-color:#cb6e84;">
                   <div class="botones-container">
                     <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
@@ -61,13 +63,15 @@
                   <td scope="col" style="background-color:#cb6e84;">$10.000</td>
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">En Bodega</td>
                   <!--poner ver detalle como boton-->
-                  <td scope="col" class="ver-detalle" style="background-color:#cb6e84; color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</td>
+                  <td scope="col" style="background-color:#cb6e84;">
+                    <button class="ver-detalle btn btn-secondary" style="color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</button>
+                  </td>
                   <td scope="col" style="background-color:#cb6e84;">
                     <div class="botones-container">
-                      <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
-                      <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Vendido</button>
-                      <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Despachado</button>
-                      <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Entregado</button>
+                      <button type="button" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
+                      <button type="button" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Vendido</button>
+                      <button type="button" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Despachado</button>
+                      <button type="button" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Entregado</button>
                     </div>
                   </td>
               </tr>
@@ -79,7 +83,8 @@
                 <td scope="col" style="background-color:#cb6e84;">$7.000</td>
                 <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Entregado</td>
                 <!--poner ver detalle como boton-->
-                <td scope="col" class="ver-detalle" style="background-color:#cb6e84; color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</td>
+                <td scope="col" style="background-color:#cb6e84;">
+                <button class="ver-detalle btn btn-secondary" style="color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</button>
                 <td scope="col" style="background-color:#cb6e84;">
                   <div class="botones-container">
                     <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
@@ -97,9 +102,10 @@
                   <td scope="col" style="background-color:#cb6e84;">$38.000</td>
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Anulado</td>
                   <!--poner ver detalle como boton-->
-                  <td scope="col" class="ver-detalle" style="background-color:#cb6e84; color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</td>
                   <td scope="col" style="background-color:#cb6e84;">
-                    <div class="botones-container">
+                    <button class="ver-detalle btn btn-secondary" style="color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</button>
+                    <td scope="col" style="background-color:#cb6e84;">
+                      <div class="botones-container">
                       <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
                       <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Vendido</button>
                       <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Despachado</button>
