--- a/bodega.html
+++ b/bodega.html
@@ -47,7 +47,7 @@
                  <!-- Cantidad -->
                  <div class="mb-3 fw-bold">
                   <label for="cantidad" class="form-label titulos_2">Cantidad</label>
-                  <input class="form-control registro_color" id="cantidad" name="cantidad" placeholder="Ej;5" >
+                  <input class="form-control registro_color" id="cantidad" name="cantidad" placeholder="Ej: 5" >
                 </div>
               </div>
               <!--Foto de perfil-->
