--- a/bodega.html
+++ b/bodega.html
@@ -114,7 +114,7 @@
                   </td>
               </tr>
               <tr> <!--tr:filas  td:columnas-->
-                <td scope="row" style="background-color:#cb6e84;">></td>
+                <td scope="row" style="background-color:#cb6e84;"></td>
                 <td scope="row" style="background-color:#cb6e84;">AEFS1243 </td>
                 <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">MOBA</td>
                 <td scope="col" style="background-color:#cb6e84;" >League of Legends</td>
