--- a/bodega.html
+++ b/bodega.html
@@ -68,8 +68,8 @@
             &nbsp;
             <div class="btn-group" style="width: 20px;">
               <button type="update" class="btn boton_buscar_anonimo_2">Guardar</button>
-              <button type="new" class="btn boton_buscar_anonimo_2" >Nuevo</button>
-              <button type="delete" class="btn boton_buscar_anonimo_2" >Eliminar</button>
+              <button id="btnNuevo" type="button" class="btn boton_buscar_anonimo_2">Nuevo</button>
+              <button id="btnNuevo" type="button" class="btn boton_buscar_anonimo_2">Eliminar</button>
               <button id="id_btnLimpiar" type="reset" class="btn boton_buscar_anonimo_2" >Limpiar</button>
             </div>
             </div>
