--- a/productos.html
+++ b/productos.html
@@ -107,11 +107,11 @@
                   </div>
                   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                   <div class="btn-group" style="width: 20px;">
-                    <button type="update" class="btn boton_buscar_anonimo_2" >Guardar</button>
-                    <button type="new" class="btn boton_buscar_anonimo_2" >Nuevo</button>
-                    <button type="delete" class="btn boton_buscar_anonimo_2" >Eliminar</button>
-                    <button id="id_btnLimpiar" type="reset" class="btn boton_buscar_anonimo_2" >Limpiar</button>
-                  </div>
+                    <button type="update" class="btn boton_buscar_anonimo_2">Guardar</button>
+                    <button id="btnNuevo" type="button" class="btn boton_buscar_anonimo_2">Nuevo</button>
+                    <button id="btnNuevo" type="button" class="btn boton_buscar_anonimo_2">Eliminar</button>
+                    <button id="id_btnLimpiar" type="reset" class="btn boton_buscar_anonimo_2">Limpiar</button>
+                </div>
                 </div>
               </div>
             </form>
@@ -160,7 +160,7 @@
                     <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/producto1.jpg" alt="Foto" style="width: 50px;"></td>
                 </tr>
                 <tr> <!--tr:filas  td:columnas-->
-                  <td scope="row" style="background-color:#cb6e84;">></td>
+                  <td scope="row" style="background-color:#cb6e84;"></td>
                   <td scope="row" style="background-color:#cb6e84;">AEFS1243 </td>
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">MOBA</td>
                   <td scope="col" style="background-color:#cb6e84;" >League of Legends</td>
