--- a/usuarios.html
+++ b/usuarios.html
@@ -132,7 +132,7 @@
               <div class="btn-group" style="width: 20px;">
                 <button type="update" class="btn boton_buscar_anonimo_2">Guardar</button>
                 <button type="update" class="btn boton_buscar_anonimo_2" >Agregar</button>
-                <button type="reset" class="btn boton_buscar_anonimo_2">Eliminar</button>
+                <button id="btnNuevo" type="button" class="btn boton_buscar_anonimo_2">Eliminar</button>
                 <button id="id_btnLimpiar" type="reset" class="btn boton_buscar_anonimo_2" >Limpiar</button>
             </div>
             <div> 
