--- a/productos.html
+++ b/productos.html
@@ -76,16 +76,16 @@
 
                     <div class="mb-3 fw-bold">
                       <label for="descuento_subscriptor" class="form-label titulos_2">Descuento Subscriptor</label>
-                      <input class="form-control registro_color" id="descuento_subscriptor" name="descuento_subscriptor" placeholder="5%" >
+                      <input type="number" class="form-control registro_color" id="descuento_subscriptor" name="descuento_subscriptor" placeholder="5%" >
                     </div>
 
                     <!-- Descuento por oferta -->
 
                     <div class="mb-3 fw-bold">
                       <label for="descuento_oferta" class="form-label titulos_2">Descuento por Oferta</label>
-                      <input class="form-control registro_color" id="descuento_oferta" name= "descuento_oferta" placeholder="10%" required>
+                      <input type="number" class="form-control registro_color" id="descuento_oferta" name= "descuento_oferta" placeholder="10%" required>
                       </div>
-
+                      <br>
                   </div>
                   
                   <br><br>
@@ -107,8 +107,8 @@
                   </div>
                   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                   <div class="btn-group" style="width: 20px;">
-                    <button type="update" class="btn boton_buscar_anonimo_2">Guardar</button>
-                    <button id="btnNuevo" type="button" class="btn boton_buscar_anonimo_2">Nuevo</button>
+                    <button type="submit" class="btn boton_buscar_anonimo_2">Guardar</button>
+                    <button id="reset" type="button" class="btn boton_buscar_anonimo_2">Nuevo</button>
                     <button id="btnNuevo" type="button" class="btn boton_buscar_anonimo_2">Eliminar</button>
                     <button id="id_btnLimpiar" type="reset" class="btn boton_buscar_anonimo_2">Limpiar</button>
                 </div>
