--- a/ventas.html
+++ b/ventas.html
@@ -44,7 +44,7 @@
                 <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Vendido</td>
                 <!--poner ver detalle como boton-->
                 <td scope="col" style="background-color:#cb6e84;">
-                  <button class="ver-detalle btn btn-secondary" style="color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</button>
+                  <button class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2" onclick="verDetalle()">Ver Detalle</button>
                 </td>
                 <td scope="col" style="background-color:#cb6e84;">
                   <div class="botones-container">
@@ -64,7 +64,7 @@
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">En Bodega</td>
                   <!--poner ver detalle como boton-->
                   <td scope="col" style="background-color:#cb6e84;">
-                    <button class="ver-detalle btn btn-secondary" style="color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</button>
+                    <button class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2" onclick="verDetalle()">Ver Detalle</button>
                   </td>
                   <td scope="col" style="background-color:#cb6e84;">
                     <div class="botones-container">
@@ -84,7 +84,7 @@
                 <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Entregado</td>
                 <!--poner ver detalle como boton-->
                 <td scope="col" style="background-color:#cb6e84;">
-                <button class="ver-detalle btn btn-secondary" style="color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</button>
+                <button class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2" onclick="verDetalle()">Ver Detalle</button>
                 <td scope="col" style="background-color:#cb6e84;">
                   <div class="botones-container">
                     <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
@@ -103,7 +103,7 @@
                   <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Anulado</td>
                   <!--poner ver detalle como boton-->
                   <td scope="col" style="background-color:#cb6e84;">
-                    <button class="ver-detalle btn btn-secondary" style="color: #f0bbc7;" onclick="verDetalle()">Ver Detalle</button>
+                    <button class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2" onclick="verDetalle()">Ver Detalle</button>
                     <td scope="col" style="background-color:#cb6e84;">
                       <div class="botones-container">
                       <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
