--- a/usuarios.html
+++ b/usuarios.html
@@ -34,7 +34,7 @@
           <!-- Campos de registro de usuario -->
           <div class="mb-3 fw-bold">
               <label for="id" class="form-label titulos_2">ID</label>
-              <input type="text" class="form-control registro_color" id="id" name="id" placeholder="Ej: 58" >
+              <input type="number" class="form-control registro_color" id="id" name="id" placeholder="Ej: 58" >
               
           </div>
           
@@ -130,15 +130,11 @@
               <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
               <!-- Botones -->
               <div class="btn-group" style="width: 20px;">
-                <button type="update" class="btn boton_buscar_anonimo_2">Guardar</button>
-                <button type="update" class="btn boton_buscar_anonimo_2" >Agregar</button>
+                <button type="submit" class="btn boton_buscar_anonimo_2">Guardar</button>
+                <button type="reset" class="btn boton_buscar_anonimo_2" >Agregar</button>
                 <button id="btnNuevo" type="button" class="btn boton_buscar_anonimo_2">Eliminar</button>
                 <button id="id_btnLimpiar" type="reset" class="btn boton_buscar_anonimo_2" >Limpiar</button>
-            </div>
-            <div> 
-              <br>
-              <button type="button" class="btn boton_ver_detalle">Generar Contraseña</button>
-            </div>
+              </div>
               </div>
             </div>
           </form>
@@ -164,6 +160,7 @@
               <th scope="col" style="background-color:#ef89a1" class="d-none d-lg-block d-lg-table-cell">Dirección</th>
               <th scope="col" style="background-color:#ef89a1">Con Subscripción</th>
               <th scope="col" style="background-color:#ef89a1" class="d-none d-lg-block d-lg-table-cell">Foto</th>
+              <th scope="col" style="background-color:#ef89a1" class="d-none d-lg-block d-lg-table-cell">Contraseña</th>
             </tr>
           </thead>
           <tbody>
@@ -177,6 +174,9 @@
               <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Calle Falsa 123</td>
               <td scope="col" style="background-color:#cb6e84;">Sí</td>
               <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/foto_usuario.jpg" alt="Foto" style="width: 50px;"></td>
+              <td scope="col" style="background-color:#cb6e84;">
+                <button type="submit" href="#" class="btn btn-primary btn-sm boton_buscar_anonimo_2">Guardar Contraseña</button>
+              </td>
             </tr>
             <tr>
               <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">2</td>
@@ -188,6 +188,9 @@
               <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Avenida Principal 456</td>
               <td scope="col" style="background-color:#cb6e84;">No</td>
               <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"><img src="img/perfil_usuario.webp" alt="Foto" style="width: 50px;"></td>
+              <td scope="col" style="background-color:#cb6e84;">
+                <button type="submit" href="#" class="btn btn-primary btn-sm boton_buscar_anonimo_2">Guardar Contraseña</button>
+              </td>
             </tr> 
             <!-- Pueden agregar más filas con datos aleatorios según sea necesario -->
           </tbody>
