--- a/bodega.html
+++ b/bodega.html
@@ -51,7 +51,7 @@
                 </div>
               </div>
               <!--Foto de perfil-->
-              <div class="col-sm-12 col-md-6 justify-content-center"">
+              <div class="col-sm-12 col-md-6 justify-content-center">
                 <img id="user-image-preview image-bodega" src="img/producto1.jpg" alt="" class="user-image" style="max-width: 300px; margin-left: 100px;">
               </div>
             </div>
